--- a/styles/index.css
+++ b/styles/index.css
@@ -1,300 +1,342 @@
-
 .open-sans-normal {
-  /* font-family: "Open Sans", sans-serif; 
+    /* font-family: "Open Sans", sans-serif; 
   font-optical-sizing: auto;
  
   font-style: normal;
   font-variation-settings:
     "wdth" 100; */
 
-    
 
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
- 
-  font-style: normal;
+
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+
+    font-style: normal;
 
 }
 
-nav{
-    display:flex;
+nav {
+    display: flex;
     align-items: center;
-    justify-content:space-between;
-    margin:0 150px;
+    justify-content: space-between;
+    margin: 0 150px;
 }
 
-.nav-title{
-    font-size:34px;
-    color:#463FFE;
+.nav-title {
+    font-size: 34px;
+    color: #463FFE;
 }
-.nav-button{
-    font-size:16px;
+
+.nav-button {
+    font-size: 16px;
     font-weight: bold;
-    color:#FFFFFF;
-    background-color:#4E47FF;
+    color: #FFFFFF;
+    background-color: #4E47FF;
     /* width:fit-content; */
-    width:132px;
-    height:48px;
-    padding:12px,36px;
-    border-radius:5px;
-    border:none;
+    width: 132px;
+    height: 48px;
+    padding: 12px, 36px;
+    border-radius: 5px;
+    border: none;
 }
 
-.action-button{
-    font-size:16px;
+.action-button {
+    font-size: 16px;
     font-weight: bold;
-    color:#FFFFFF;
-    background-color:#4E47FF;
+    color: #FFFFFF;
+    background-color: #4E47FF;
     /* width:fit-content; */
-    width:230px;
-    height:48px;
-    padding:12px,36px;
-    border-radius:5px;
-    border:none;
+    width: 230px;
+    height: 48px;
+    padding: 12px, 36px;
+    border-radius: 5px;
+    border: none;
 
 }
 
-.action{
-    display:flex;
-    justify-content:space-between;
+.action {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    
+
 }
-.action-content-line-break{
-     display:block;
+
+.action-content-line-break {
+    display: block;
 }
 
 
-.banner-button{
-    font-size:10px;
-    font-weight:bold;
-    color:#FFFFFF;
-    background-color:#4E47FF;
+.banner-button {
+    font-size: 10px;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: #4E47FF;
     /* width:fit-content; */
-    width:102px;
-    height:34px;
-    padding:12px,36px;
-    border-radius:5px;
-    border:none;
-    text-align:center;
-    margin-bottom:20px;
-    
+    width: 102px;
+    height: 34px;
+    padding: 12px, 36px;
+    border-radius: 5px;
+    border: none;
+    text-align: center;
+    margin-bottom: 20px;
+
 }
 
 
-.banner{
-    display:flex;
-    align-items:center;
-    justify-content:center;
+.banner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.banner-content .line-break{
+.banner-content .line-break {
     display: block;
     text-align: center;
 
 }
 
-.banner-content{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:center;
-    gap:0;
+.banner-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
 
 }
 
-.banner-content h4{
-    font-size:60px;
-    
-    color:#252432;
+.banner-content h4 {
+    font-size: 60px;
+
+    color: #252432;
 }
 
-.header{
-   background-image:url(../B12A01-landing-launchpad/Assets/Hero-bg.png); 
+.header {
+    background-image: url(../B12A01-landing-launchpad/Assets/Hero-bg.png);
 }
 
-main{
-    max-width:1140px;
-    margin:0 auto;
-
-}
-
-.action{
-    margin-top:130px;
+main {
+    max-width: 1140px;
+    margin: 0 auto;
 
 }
 
-.action .action-image img{
-    width:300px;
-    height:330px;
-    border-radius:15px;
-}
-
-.productive-user-section{
-    padding:50px 140px;
-    text-align:center;
-    margin-top:130px;
-    background-color:#4E47FF;
+.action {
+    margin-top: 130px;
 
 }
 
-.productive-user-section h3{
-    font-size:38px;
+.action .action-image img {
+    width: 300px;
+    height: 330px;
+    border-radius: 15px;
 }
 
-.user-count{
-    font-size:50px;
+.productive-user-section {
+    padding: 50px 140px;
+    text-align: center;
+    margin-top: 130px;
+    background-color: #4E47FF;
+
+}
+
+.productive-user-section h3 {
+    font-size: 38px;
+}
+
+.user-count {
+    font-size: 50px;
     font-weight: bold;
-    color:#ebebf0;
-    margin:0;
+    color: #ebebf0;
+    margin: 0;
 }
 
 
 
-.productive-user-section-user-count{
-    display:flex;
-    justify-content:space-around;
-    align-items:center;
+.productive-user-section-user-count {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.lets-get-in-touch{
-    margin-top:100px;
-    display:flex;
-    gap:20px;
-   justify-content:space-between;
-   align-items:center;
-   background-color:#dbb0b0;
-   
-}
-
-.lets-get-in-touch input[type="text"]{
-    height:70px;
-    width:500px;
-    border-radius:5px;
-    display:block;
-    
-    
-}
-.lets-get-in-touch input[type="email"]{
-    height:70px;
-    width:500px;
-    border-radius:5px;
-    display:block;
-}
-.lets-get-in-touch textarea{
-    height:135px;
-    border-radius:5px;
-    width:500px;
-    
+.lets-get-in-touch {
+    margin-top: 100px;
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #dbb0b0;
 
 }
 
-.lets-get-in-touch button{
-    display:block;
+.lets-get-in-touch input[type="text"] {
+    height: 70px;
+    width: 500px;
+    border-radius: 5px;
+    display: block;
+
+
 }
 
-.lets-get-in-touch .lets-get-in-touch-title .Touch{
-    display:block;
+.lets-get-in-touch input[type="email"] {
+    height: 70px;
+    width: 500px;
+    border-radius: 5px;
+    display: block;
+}
+
+.lets-get-in-touch textarea {
+    height: 135px;
+    border-radius: 5px;
+    width: 500px;
+
 
 }
-.lets-get-in-touch .lets-get-in-touch-title{
-    font-size:100px;
+
+.lets-get-in-touch button {
+    display: block;
+}
+
+.lets-get-in-touch .lets-get-in-touch-title .Touch {
+    display: block;
+
+}
+
+.lets-get-in-touch .lets-get-in-touch-title {
+    font-size: 100px;
     font-weight: bold;
 }
 
-.get-in-touch{
-    font-size:16px;
+.get-in-touch {
+    font-size: 16px;
     font-weight: bold;
-    color:#FFFFFF;
-    background-color:#4E47FF;
+    color: #FFFFFF;
+    background-color: #4E47FF;
     /* width:fit-content; */
-    width:510px;
-    height:62px;
-    padding:12px,36px;
-    border-radius:5px;
-    border:none;
-}
- .logo-text .logo-text-break{
-    display:block;
+    width: 510px;
+    height: 62px;
+    padding: 12px, 36px;
+    border-radius: 5px;
+    border: none;
 }
 
-.logo-heading{
-    font-size:90px;
-    color:#463FFE;
-    text-align:center;
-    margin:0;
+.logo-text .logo-text-break {
+    display: block;
+}
+
+.logo-heading {
+    font-size: 90px;
+    color: #463FFE;
+    text-align: center;
+    margin: 0;
 
 }
 
-.logo-text{
-    text-align:center;
-    margin:0;
-    
+.logo-text {
+    text-align: center;
+    margin: 0;
+
 }
 
-.logo{
-    margin-top:105px;
+.logo {
+    margin-top: 105px;
 }
 
-.logo-items{
-    display:flex;
-    justify-content:center;
-    gap:25px;
-    margin-top:10px;
+.logo-items {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    margin-top: 10px;
 }
 
-.items{
-    text-decoration:none;
-    color:#252432;
+.items {
+    text-decoration: none;
+    color: #252432;
 }
 
-.challeges-title{
+.challeges-title {
     font-weight: bold;
-    font-size:42px;
-    text-align:center;
+    font-size: 42px;
+    text-align: center;
 }
 
-.c-break{
-    display:block;
+.c-break {
+    display: block;
 }
 
-.reviewer{
+.reviewer {
+    display: flex;
+    gap: 10px;
+}
+
+.reviewer-data {
+    display: flex;
+    flex-direction: column;
+
+
+}
+
+.reviewer-name,
+.date {
+    margin: 0;
+}
+
+.c-title {
+    font-weight: bold;
+    font-size: 15px;
+    margin-bottom: 20px;
+
+}
+
+.c-image {
+    border-radius: 30px;
+}
+
+.challence-items {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+
+.challenge-item {
+    padding: 34px;
+    box-shadow: 2px 4px 4px 0px #000000;
+    border-radius: 10px;
+}
+
+.challenges {
+    margin-top: 100px;
+}
+
+footer{
+    width:1400px;
+    height:500px;
+}
+footer{
     display:flex;
-    gap:10px;
-}
-
-.reviewer-data{
-    display:flex;
-    flex-direction:column;
-    
-    
-}
-
-.reviewer-name,.date{
-    margin:0;
-}
-.c-title{
-    font-weight:bold;
-    font-size:15px;
-    margin-bottom:20px;
-
-}
-
-.c-image{
-    border-radius:30px;
-}
-
-.challence-items{
-    display:flex;
-    gap:20px;
+    align-items:center;
     justify-content:center;
 }
-.challenge-item{
-    padding:34px;
-    box-shadow:2px 4px 4px 0px #000000 ;
-    border-radius:10px;
+
+.btn {
+    font-size: 20px;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: red;
+    /* width:fit-content; */
+    width: 200px;
+    height: 50px;
+    padding: 12px, 36px;
+    
+    border: none;
+    border-radius:4px;
+    box-shadow:inset 0 0 0 0 yellow;
+    transition:ease-out 0.3s;
+    
+
 }
 
-.challenges{
-    margin-top:100px;
+.btn:hover{
+      box-shadow:inset 200px 0 0 0 yellow;
+      cursor:pointer;
+      color: #FFFFFF;
 }
